<resources>
    <string name="app_name">AnaLog</string>
    <string name="menu_titulo_settings">Definições</string>
    <string name="menu_titulo_pesquisa">Pesquisar</string>

    <!-- Strings activity_rolos -->
    <string name="titulo_activity_rolos">Meus Rolos</string>

    <!-- Strings activity_exposiçao -->
    <string name="titulo_activity_exposicao">Rolo #</string>
    <string name="camera">Câmera</string>
    <string name="titulo_rolo">Título rolo</string>
    <string name="iso">ISO</string>
    <string name="n_exp">Numero de Exposições</string>
    <string name="formato">Formato</string>
    <string name="descr">Descrição</string>
    <string name="guardar">Guardar</string>
    <string name="revel">Revelado</string>
    <string name="eliminar">Eliminar</string>
    <string name="Escolha_ISO">Escolha o ISO</string>
    <string name="Escolha_forma">Escolha o formato</string>
    <string name="abertura_f">Abertura (F)</string>
    <string name="velocidadeD">Velocidade de Disparo</string>
    <string name="objetiva">Objetiva</string>
    <string name="dist_focal">Distancia focal (mm)</string>
    <string name="elmRolo">Eliminar Rolo</string>
    <string name="elmRolo_text">Tem a certeza que quer eliminar este rolo?</string>
    <string name="Elm_exp">Eliminar Exposição</string>
    <string name="Elm_exp_text">Confirma a remoção desta exposição?</string>

    <!-- String para formuário Adicionar Rolo -->
    <string-array name="ISO_values">
        <item>50</item>
        <item>100</item>
        <item>200</item>
        <item>300</item>
        <item>400</item>
        <item>800</item>
        <item>1600</item>
        <item>3200</item>
    </string-array>

    <string-array name="formato_values">
        <item>35</item>
        <item>110</item>
        <item>120</item>
        <item>127</item>
        <item>220</item>
    </string-array>

    <string name="Cam_escolha">Escolha a câmera</string>
    <string name="Erro_desc">Insira uma descrição valida</string>
    <string name="Erro_form">Insira um formato</string>
    <string name="Erro_nexp">Insira um numero de exposições valido</string>
    <string name="Erro_ISO">Insira um ISO</string>
    <string name="Erro_titulo">Insira um título valido</string>
    <string name="Erro_Vel">Insira uma velocidade valida</string>
    <string name="Erro_Abr">Insira uma abertura valida</string>
    <string name="Msg_notif">Os rolos abaixo encontra-se a terminar:</string>

    <string name="title_activity_perfil">PerfilActivity</string>
    <string name="perfil">Perfil</string>

    <!-- Strings atividade Preferencias -->
    <string name="titulo_perfil">Perfil</string>
    <string name="titulo_camera">Cameras</string>
    <string name="titulo_objetivas">Objetivas</string>

    <string name="Username_str">Nome de utilizador</string>
    <string name="notificacoes_toggle">Ativar notificações:</string>
    <string name="equipamento_marca">Marca</string>
    <string name="equipamento_modelo">Modelo</string>
    <string name="erroEquipamento">Campo de preenchimento obrigatório</string>
    <string name="Remv">Remover</string>
    <string name="verify">abcdefghijklmnopqrstuvwxyzçÇ.,ãÃõÕáàóò()ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890é-ÉÀ</string>

</resources>
