<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:paddingStart="15dp"
    android:paddingEnd="15dp">

    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="center|top"
        android:src="@drawable/ic_handle"
        android:layout_marginBottom="20dp"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/AppTheme.TextInputLayout"
        android:id="@+id/newMarcaLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/equipamento_marca"
        app:errorEnabled="true"
        app:counterMaxLength="20"
        app:counterEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/AppTheme.TextCursor"
            android:id="@+id/newMarcaText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:digits="@string/verify"

            android:maxLines="1"
            android:textSize="15sp"
            android:maxLength="20"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/AppTheme.TextInputLayout"
        android:id="@+id/newModeloLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/equipamento_modelo"
        app:errorEnabled="true"
        app:counterMaxLength="20"
        app:counterEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/AppTheme.TextCursor"
            android:id="@+id/newModeloText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"
            android:digits="@string/verify"
            android:textSize="15sp"
            android:maxLength="20"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_marginBottom="10dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_new_Objetiva"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guardar"
            android:backgroundTint="@color/blue500"
            android:textAllCaps="false"/>

    </LinearLayout>

</LinearLayout>