<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:paddingStart="15dp"
    android:paddingEnd="15dp">

    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="center|top"
        android:src="@drawable/ic_handle"
        android:layout_marginBottom="20dp"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/AppTheme.TextInputLayout"
        android:id="@+id/TituloNewLayout"
        app:errorEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/titulo_rolo"
        app:counterMaxLength="20"
        app:counterEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/AppTheme.TextCursor"
            android:id="@+id/Titulo_New_Rolo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:digits="abcdefghijklmnopqrstuvwxyzçÇ, ãÃõÕáàóò()ABCDEFGHIJKLMNOPQRSTUVWXYZ123456789"
            android:maxLines="1"
            android:textSize="15sp"
            android:maxLength="20"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/AppTheme.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickDialogISO"
        android:hint="@string/camera">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/AppTheme.TextCursor"
            android:id="@+id/IDCAM_New_Rolo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"
            android:focusable="false"
            android:onClick="onClickDialogCam"
            android:textSize="15sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/AppTheme.TextInputLayout"
        android:id="@+id/ISONewLayout"
        app:errorEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/iso"
        android:onClick="onClickDialogCam">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/AppTheme.TextCursor"
            android:id="@+id/ISO_New_Rolo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:maxLines="1"
            android:textSize="15sp"
            android:enabled="true"
            android:onClick="onClickDialogISO"
            android:focusable="false"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/AppTheme.TextInputLayout"
        android:id="@+id/NExpNewLayout"
        app:errorEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/n_exp"
        app:counterMaxLength="2"
        app:counterEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/AppTheme.TextCursor"
            android:id="@+id/NExp_New_Rolo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLines="1"
            android:textSize="15sp"
            android:maxLength="2"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/AppTheme.TextInputLayout"
        android:id="@+id/FormatoNewLayout"
        app:errorEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/formato">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/AppTheme.TextCursor"
            android:id="@+id/Formato_New_Rolo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLines="1"
            android:textSize="15sp"
            android:enabled="true"
            android:onClick="onClickDialogFormato"
            android:focusable="false"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/AppTheme.TextInputLayout"
        android:id="@+id/descricaoNewLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/descr"
        app:errorEnabled="true"
        app:counterMaxLength="200"
        app:counterEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/AppTheme.TextCursor"
            android:id="@+id/Desc_New_Rolo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="abcdefghijklmnopqrstuvwxyzçÇ,. ãÃõÕáàóò()ABCDEFGHIJKLMNOPQRSTUVWXYZ123456789"
            android:inputType="text"
            android:maxLines="1"
            android:textSize="15sp"
            android:maxLength="200"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_marginBottom="10dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/Btn_New_Rolo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guardar"
            android:backgroundTint="@color/blue500"
            android:textAllCaps="false"/>

    </LinearLayout>

</LinearLayout>