<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PerfilActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:navigationIcon="?attr/homeAsUpIndicator">
                <androidx.appcompat.widget.AppCompatTextView
                    android:text="@string/perfil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    style="@style/AppTheme.Title"
                    android:layout_gravity="center"
                    />
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>
    </com.google.android.material.appbar.AppBarLayout>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:fitsSystemWindows="true"
        android:paddingTop="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginTop="?attr/actionBarSize">
        <com.google.android.material.textfield.TextInputLayout
            style="@style/AppTheme.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterMaxLength="20"
            app:counterEnabled="true"
            android:hint="@string/Username_str">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/AppTheme.TextCursor"
                android:id="@+id/UserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLength="20"
                android:maxLines="1"
                android:textSize="15sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingStart="10dp"
                android:text="@string/revel"/>
            <Switch
                android:id="@+id/Notif"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:paddingStart="30dp"/>
        </LinearLayout>


    </androidx.appcompat.widget.LinearLayoutCompat>
    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/app_bar_bottom"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        style="@style/Widget.MaterialComponents.BottomAppBar"
        android:layout_gravity="bottom"
        app:backgroundTint="@color/bottomAppBarColor"
        app:fabAlignmentMode="end"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_addExp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/app_bar_bottom"
        app:srcCompat="@drawable/ic_round_done"
        android:tint="@color/white"
        app:fabCustomSize="56dp"
        app:backgroundTint="@color/blue500"
        android:onClick="onClickPerfilUpdate"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
